docker added y modelos ignorados correctamente

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ ml-credit/artifacts/
 ml-text/models/
 ml-anomaly/models/
 ml-letter/models/
+models/
 
 ####################################
 # Logs & outputs
