before chages front

--- a/Data/rag_normas/page_manifest.json
+++ b/Data/rag_normas/page_manifest.json
@@ -3,56 +3,32 @@
   "docs": [
     {
       "doc_key": "ISO_14064-1",
-      "path": "/home/harielpadillasanchez/Documentos/hackathon/Tec_environmental_risk/Data/rag_normas/ISO_14064-1_2018.pdf",
+      "doc_id": "ISO_14064_org",
+      "path": "/home/harielpadillasanchez/Documentos/hackathon/Tec_environmental_risk/Data/rag_normas/ISO_14064_org.pdf",
       "selected_pages_0index": [
-        1,
-        2,
-        3,
-        4,
-        5,
+        7,
+        8,
+        9,
+        10,
+        11,
+        12,
+        13,
+        14,
+        15,
         16,
         17,
-        18,
-        19,
-        20,
-        21,
-        22,
-        23,
-        24,
-        25,
-        26,
-        28,
-        29,
-        30,
-        31,
-        32,
-        33,
-        34,
-        35,
-        36,
-        37,
-        40,
-        41,
-        42,
-        48,
-        49,
-        50,
-        51,
-        52,
-        53,
-        54,
-        55,
-        56,
-        57
+        37
       ],
+      "allowlist_used": true,
       "extraction_mode_stats": {
-        "text_layer": 39,
+        "text_layer": 12,
         "ocr": 0
       }
     },
     {
       "doc_key": "ISO_14067",
-      "path": "/home/harielpadillasanchez/Documentos/hackathon/Tec_environmental_risk/Data/rag_normas/UNE-EN-ISO-14067.pdf",
+      "doc_id": "ISO_14067_extracto",
+      "path": "/home/harielpadillasanchez/Documentos/hackathon/Tec_environmental_risk/Data/rag_normas/ISO_14067_extracto_indice.pdf",
       "selected_pages_0index": [
         0,
         1,
@@ -60,6 +36,24 @@
         3,
         4
       ],
+      "allowlist_used": false,
+      "extraction_mode_stats": {
+        "text_layer": 5,
+        "ocr": 0
+      }
+    },
+    {
+      "doc_key": "GHG_Protocol_Scope3",
+      "doc_id": "GHG_Protocol_corp",
+      "path": "/home/harielpadillasanchez/Documentos/hackathon/Tec_environmental_risk/Data/rag_normas/GHG_Protocol_corp.pdf",
+      "selected_pages_0index": [
+        21,
+        22,
+        43,
+        44,
+        119
+      ],
+      "allowlist_used": true,
       "extraction_mode_stats": {
         "text_layer": 5,
         "ocr": 0
@@ -67,181 +61,66 @@
     },
     {
       "doc_key": "NACDMX-007-RNAT-2019",
-      "path": "/home/harielpadillasanchez/Documentos/hackathon/Tec_environmental_risk/Data/rag_normas/GOCDMX_21-07-20_SEDEMA.pdf",
+      "doc_id": "NACDMX_RCD",
+      "path": "/home/harielpadillasanchez/Documentos/hackathon/Tec_environmental_risk/Data/rag_normas/NACDMX_RCD.pdf",
       "selected_pages_0index": [
-        91,
-        92,
-        93,
-        94,
-        95,
-        96,
         97,
         98,
         99,
-        100,
-        101,
-        102,
-        103,
-        104,
-        105,
-        106,
-        107,
-        108,
-        109,
-        110,
-        111,
-        112,
-        113,
-        114,
-        118,
         119,
-        120,
-        121,
-        122,
-        123,
-        124,
-        125,
-        126
+        120
       ],
+      "allowlist_used": true,
       "extraction_mode_stats": {
-        "text_layer": 33,
+        "text_layer": 5,
+        "ocr": 0
+      }
+    },
+    {
+      "doc_key": "Ley_Residuos_Solidos_CDMX",
+      "doc_id": "LRS_RSD_CDMX",
+      "path": "/home/harielpadillasanchez/Documentos/hackathon/Tec_environmental_risk/Data/rag_normas/LRS_RSD_CDMX.pdf",
+      "selected_pages_0index": [
+        14,
+        25,
+        27,
+        31,
+        32
+      ],
+      "allowlist_used": true,
+      "extraction_mode_stats": {
+        "text_layer": 5,
         "ocr": 0
       }
     },
     {
       "doc_key": "Reglamento_Construcciones_CDMX",
-      "path": "/home/harielpadillasanchez/Documentos/hackathon/Tec_environmental_risk/Data/rag_normas/RGTO_CONSTRUCCIONES_22_04_2022.pdf",
+      "doc_id": "RGTO_CONSTR_CDMX",
+      "path": "/home/harielpadillasanchez/Documentos/hackathon/Tec_environmental_risk/Data/rag_normas/RGTO_CONSTR_CDMX.pdf",
       "selected_pages_0index": [
-        1,
-        2,
-        3,
-        14,
-        15,
-        16,
-        17,
-        18,
-        19,
-        20,
-        21,
-        22,
-        23,
         24,
-        25,
-        26,
-        27,
-        28,
-        29,
-        30,
-        33,
-        34,
-        35,
-        36,
-        37,
-        38,
-        45,
-        46,
-        47,
-        48,
-        49,
-        51,
-        52,
-        53,
-        54,
-        57,
-        58,
-        59,
-        60,
+        42,
+        50,
         61,
-        62,
-        63,
-        64,
-        65,
-        66,
-        100,
-        101,
-        102,
-        114,
-        115,
-        116,
-        121,
-        122,
-        123
+        80
       ],
+      "allowlist_used": true,
       "extraction_mode_stats": {
-        "text_layer": 54,
+        "text_layer": 5,
         "ocr": 0
       }
     },
     {
       "doc_key": "NOM-001-SEDE-2012",
-      "path": "/home/harielpadillasanchez/Documentos/hackathon/Tec_environmental_risk/Data/rag_normas/NOM-001-SEDE-2012.pdf",
+      "doc_id": "NOM001_electrica",
+      "path": "/home/harielpadillasanchez/Documentos/hackathon/Tec_environmental_risk/Data/rag_normas/NOM001_electrica.pdf",
       "selected_pages_0index": [
-        34,
-        35,
-        36,
-        41,
-        42,
-        43,
-        74,
-        75,
-        76,
-        77,
-        81,
-        82,
-        83,
-        89,
-        90,
-        91,
-        92,
-        93,
-        94,
-        95,
-        96,
-        97,
-        98,
-        99,
-        105,
-        106,
-        107,
-        108,
-        109,
-        253,
-        254,
-        255,
-        256,
-        257,
-        258,
-        428,
-        429,
-        430,
-        431,
-        432,
-        489,
-        490,
-        491,
-        503,
-        504,
-        505,
-        508,
-        509,
-        510,
-        596,
-        597,
-        598,
-        599,
-        671,
-        672,
-        673,
-        699,
-        700,
-        701,
-        765,
-        766,
-        767,
-        768
+        266,
+        633
       ],
+      "allowlist_used": true,
       "extraction_mode_stats": {
-        "text_layer": 63,
+        "text_layer": 2,
         "ocr": 0
       }
     }
@@ -249,19 +128,13 @@
   "missing_docs": [
     {
       "doc_key": "RENE",
+      "doc_id": "RENE",
       "norma": "RENE"
     },
     {
-      "doc_key": "GHG_Protocol_Scope3",
-      "norma": "GHG_Protocol_Scope3"
-    },
-    {
       "doc_key": "NADF-018-AMBT-2009",
+      "doc_id": "NADF-018-AMBT-2009",
       "norma": "NADF-018-AMBT-2009"
-    },
-    {
-      "doc_key": "Ley_Residuos_Solidos_CDMX",
-      "norma": "Ley_Residuos_Solidos_CDMX"
     }
   ]
 }
